[tool.poetry]
name = "streamui"
version = "v0.1.2"
description = ""
authors = ["Nate Smith <nate@cloudcrestgroup.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9 || ^3.10 || ^3.11 || ^3.12"
pandas = "^2.2.2"
ipywidgets = "^8.1.3"
altair = {extras = ["all"], version = "^5.3.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
